add step for print message

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,7 +3,7 @@ pipeline {
     stages {
         stage('Build') {
             steps {
-    // Commands to build
+                bat 'Hello World'
             }
         }
     }
